--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sourcebits.webster.websterbank" >
+    package="com.sourcebits.webster.websterbank">
+
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreenActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,12 +22,8 @@
         </activity>
 
 
-        <activity
-            android:name=".SignIn">
-        </activity>
-    <activity
-        android:name=".SavingsActivity">
-</activity>
+        <activity android:name=".SignIn"></activity>
+        <activity android:name=".SavingsActivity"></activity>
 
 
     </application>
